--- a/itis3135/project/loops.html
+++ b/itis3135/project/loops.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>Loops</h2>
-            <!-- Add content for Loops module -->
+            <p>Content for module here.</p>
         </div>
     </main>
 
