--- a/itis3135/project/methods.html
+++ b/itis3135/project/methods.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>Methods</h2>
-            <!-- Add content for Methods module -->
+            <p>Content for module here.</p>
         </div>
     </main>
 
