--- a/itis3135/project/oop.html
+++ b/itis3135/project/oop.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>Object Oriented Programming</h2>
-            <!-- Add content for Object Oriented Programming module -->
+            <p>Content for module here.</p>
         </div>
     </main>
 
