--- a/itis3135/project/resources.html
+++ b/itis3135/project/resources.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>Resources</h2>
-            <!-- Add content for resources here -->
+            <p>Content for resources here.</p>
         </div>
     </main>
 
