--- a/itis3135/project/variables_data_types.html
+++ b/itis3135/project/variables_data_types.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>Variables and Data Types</h2>
-            <!-- Add content for Variables and Data Types module -->
+            <p>Content for module here.</p>
         </div>
     </main>
 
