working on client project

--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -15,7 +15,8 @@
         <div class="container">
             <h2>About Us</h2>
             <p>
-                About us...
+               My name is Nathaniel Hayes and I am the creator of this website. This website was made as a client project for a course I am taking. The purpose of this website is to
+               help you learn how to program in java by working through a couple of modules and answering questions.
             </p>
         </div>
     </main>
