--- a/itis3135/project/resources.html
+++ b/itis3135/project/resources.html
@@ -14,7 +14,8 @@
     <main>
         <div class="container">
             <h2>Resources</h2>
-            <p>Content for resources here.</p>
+            <p>In case you were looking for additional resources to help you learn java below are links to two great websites with free java courses. </p>
+            <a href="https://www.freecodecamp.org/news/learn-java-free-java-courses-for-beginners/"><img src="images/fcclogo.png" alt="fcc logo"></a><a href="https://www.codecademy.com/enrolled/courses/learn-java"><img src="images/codeacademy.jpg" alt="code academy logo"></a>
         </div>
     </main>
 
