--- a/itis3135/project/modules.html
+++ b/itis3135/project/modules.html
@@ -15,11 +15,11 @@
         <div class="container">
             <h2>Modules</h2>
             <ul class="modules-list">
-                <li><a href="variables_data_types.html">Variables and Data Types</a></li>
-                <li><a href="control_structures.html">Control Structures (If/Else Statements)</a></li>
-                <li><a href="loops.html">Loops (for, while)</a></li>
+                <li><a href="variables_datatypes.html">Variables and Data Types</a></li>
+                <li><a href="ifelse.html">If/Else Statements</a></li>
+                <li><a href="switchstatements.html">Switch Statements</a></li>
                 <li><a href="methods.html">Methods</a></li>
-                <li><a href="oop.html">Object Oriented Programming</a></li>
+                <li><a href="loops.html">Loops</a></li>
             </ul>
         </div>
     </main>
