working on project

--- a/itis3135/project/ifelse.html
+++ b/itis3135/project/ifelse.html
@@ -28,7 +28,7 @@
   </div>
   <br>
   <!-- The dots/circles -->
-  <div>
+  <div  id="dot">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <p>The first slide shows </p>
