--- a/itis3135/project/switchstatements.html
+++ b/itis3135/project/switchstatements.html
@@ -33,7 +33,7 @@
   </div>
   <br>
   <!-- The dots/circles -->
-  <div>
+  <div  id="dot">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
