finished client project

--- a/itis3135/project/about.html
+++ b/itis3135/project/about.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <header>
-        <div id="headerPlaceholder" data-header="components/header.html"></div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Us</title>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="headerPlaceholder"
+                data-header="components/header.html"></div>
+        </header>
 
-    <main>
-        <div class="container">
-            <h2>About Us</h2>
-            <p>
-               My name is Nathaniel Hayes and I am the creator of this website. This website was made as a client project for a course I am taking. The purpose of this website is to
-               help you learn how to program in java by working through a couple of modules and answering questions.
-            </p>
-        </div>
-    </main>
+        <main>
+            <div class="container">
+                <h2>About Us</h2>
+                <p>
+                    My name is Nathaniel Hayes and I am the creator of this
+                    website. This website was made as a client project for a
+                    course I am taking. The purpose of this website is to
+                    help you learn how to program in java by working through a
+                    couple of modules and answering questions.
+                </p>
+            </div>
+        </main>
 
-    <footer>
-        <div id="footerPlaceholder" data-footer="components/footer.html"></div>
-    </footer>
+        <footer>
+            <div id="footerPlaceholder"
+                data-footer="components/footer.html"></div>
+        </footer>
 
-    <script src="scripts/header_loader.js"></script>
-    <script src="scripts/footer_loader.js"></script>
-    <script src="scripts/scripts.js"></script>
-</body>
+        <script src="scripts/header_loader.js"></script>
+        <script src="scripts/footer_loader.js"></script>
+        <script src="scripts/scripts.js"></script>
+    </body>
 </html>
