--- a/itis3135/project/modules.html
+++ b/itis3135/project/modules.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modules</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <header>
-        <div id="headerPlaceholder" data-header="components/header.html"></div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Modules</title>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="headerPlaceholder"
+                data-header="components/header.html"></div>
+        </header>
 
-    <main>
-        <div class="container">
-            <h2>Modules</h2>
-            <ul class="modules-list">
-                <li><a href="variables_datatypes.html">Variables and Data Types</a></li>
-                <li><a href="ifelse.html">If/Else Statements</a></li>
-                <li><a href="switchstatements.html">Switch Statements</a></li>
-                <li><a href="methods.html">Methods</a></li>
-                <li><a href="loops.html">Loops</a></li>
-            </ul>
-        </div>
-    </main>
+        <main>
+            <div class="container">
+                <h2>Modules</h2>
+                <ul class="modules-list">
+                    <li><a href="variables_datatypes.html">Variables and Data
+                            Types</a></li>
+                    <li><a href="ifelse.html">If/Else Statements</a></li>
+                    <li><a href="switchstatements.html">Switch
+                            Statements</a></li>
+                    <li><a href="methods.html">Methods</a></li>
+                    <li><a href="loops.html">Loops</a></li>
+                </ul>
+            </div>
+        </main>
 
-    <footer>
-        <div id="footerPlaceholder" data-footer="components/footer.html"></div>
-    </footer>
+        <footer>
+            <div id="footerPlaceholder"
+                data-footer="components/footer.html"></div>
+        </footer>
 
-    <script src="scripts/header_loader.js"></script>
-    <script src="scripts/footer_loader.js"></script>
-    <script src="scripts/scripts.js"></script>
-</body>
+        <script src="scripts/header_loader.js"></script>
+        <script src="scripts/footer_loader.js"></script>
+        <script src="scripts/scripts.js"></script>
+    </body>
 </html>
