--- a/itis3135/project/resources.html
+++ b/itis3135/project/resources.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <header>
-        <div id="headerPlaceholder" data-header="components/header.html"></div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Resources</title>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="headerPlaceholder"
+                data-header="components/header.html"></div>
+        </header>
 
-    <main>
-        <div class="container">
-            <h2>Resources</h2>
-            <p>In case you were looking for additional resources to help you learn java below are links to two great websites with free java courses. </p>
-            <a href="https://www.freecodecamp.org/news/learn-java-free-java-courses-for-beginners/"><img src="images/fcclogo.png" alt="fcc logo"></a><a href="https://www.codecademy.com/enrolled/courses/learn-java"><img src="images/codeacademy.jpg" alt="code academy logo"></a>
-        </div>
-    </main>
+        <main>
+            <div class="container">
+                <h2>Resources</h2>
+                <p>In case you were looking for additional resources to help you
+                    learn java below are links to two great websites with free
+                    java courses. </p>
+                <a
+                    href="https://www.freecodecamp.org/news/learn-java-free-java-courses-for-beginners/"><img
+                        src="images/fcclogo.png" alt="fcc logo"
+                        class="resourceimage"></a>
+                <a
+                    href="https://www.codecademy.com/enrolled/courses/learn-java"><img
+                        src="images/codeacademy.jpg" alt="code academy logo"
+                        class="resourceimage"></a>
+                <br>
+            </div>
+        </main>
 
-    <footer>
-        <div id="footerPlaceholder" data-footer="components/footer.html"></div>
-    </footer>
+        <footer>
+            <div id="footerPlaceholder"
+                data-footer="components/footer.html"></div>
+        </footer>
 
-    <script src="scripts/header_loader.js"></script>
-    <script src="scripts/footer_loader.js"></script>
-    <script src="scripts/scripts.js"></script>
-</body>
+        <script src="scripts/header_loader.js"></script>
+        <script src="scripts/footer_loader.js"></script>
+        <script src="scripts/scripts.js"></script>
+    </body>
 </html>
