--- a/itis3135/project/tos.html
+++ b/itis3135/project/tos.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    <header>
-        <div id="headerPlaceholder" data-header="components/header.html"></div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Terms of Service</title>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="headerPlaceholder"
+                data-header="components/header.html"></div>
+        </header>
 
-    <main>
-        <div class="container">
-            <h2>Terms of Service</h2>
-            <p>
-                This website is created as a school project for educational purposes. 
-                By accessing this website, you agree to use it for learning and educational purposes only. 
-                The content provided on this website is for demonstration and educational purposes and should not be considered professional advice.
-                All content on this website is subject to change without notice.
-            </p>
-        </div>
-    </main>
+        <main>
+            <div class="container">
+                <h2>Terms of Service</h2>
+                <p>
+                    This website is created as a school project for educational
+                    purposes.
+                    By accessing this website, you agree to use it for learning
+                    and educational purposes only.
+                    The content provided on this website is for demonstration
+                    and educational purposes and should not be considered
+                    professional advice.
+                    All content on this website is subject to change without
+                    notice.
+                </p>
+            </div>
+        </main>
 
-    <footer>
-        <div id="footerPlaceholder" data-footer="components/footer.html"></div>
-    </footer>
+        <footer>
+            <div id="footerPlaceholder"
+                data-footer="components/footer.html"></div>
+        </footer>
 
-    <script src="scripts/header_loader.js"></script>
-    <script src="scripts/footer_loader.js"></script>
-    <script src="scripts/scripts.js"></script>
-</body>
+        <script src="scripts/header_loader.js"></script>
+        <script src="scripts/footer_loader.js"></script>
+        <script src="scripts/scripts.js"></script>
+    </body>
 </html>
